--- a/public/css/global.css
+++ b/public/css/global.css
@@ -86,7 +86,7 @@ section#portfolio{
 
 /* Intro */
 div#intro{
-	height: 100vh;
+	height: 100%;
 	background: #ffb74d;
 	display: flex;
 	align-items: center;
@@ -103,6 +103,7 @@ h5.aboutMe {
 	font-size: 32px;
 	font-weight: 600;
 	text-align: center;
+	padding-bottom: 5rem;
 }
 
 /* My Work */
@@ -133,6 +134,7 @@ div#myWork{
 .flip-container:hover .flipper, .flip-container.hover .flipper {
 	transform: rotateY(180deg);
 }
+
 .flip-container, .front, .back {
 	width: 400px;
 	height: 520px;
@@ -147,6 +149,9 @@ div#myWork{
 	overflow: hidden;
 	background-color: white;
 	backface-visibility: hidden;
+	-webkit-perspective: 0;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0,0,0);
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -248,27 +253,14 @@ div#contactMe{
 	width: unset;
 	padding-bottom: 2rem;
 }
-#mediumFeed {
-	background: white;
-	border-radius: 6px;
-	padding-left: 10px;
-	padding-right: 10px;
-	box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
-	height: 500px;
-}
 .twitter-timeline {
 	box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
 	border-radius: 6px;
 }
-#mediumFeed iframe {
-	border: none;
-    width: 680px;
-    height: 500px;
-}
-#blogSection {
-	display: flex;
-	justify-content: space-around;
-	flex-wrap: wrap;
+#twitter-widget-1 {
+	box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+	border-radius: 6px;
+	display: none !important;
 }
 #contactMeText{
 	padding-top: 10rem;
@@ -290,10 +282,19 @@ div#contactMe{
 #contactLinks img:hover{
 	opacity: 1;
 }
+.blogSectionItem {
+	display: flex;
+    flex-direction: column;
+    align-items: center
+}
 .blogSectionItem h2{
 	text-align: center;
 }
 #contactMeWrapper {
+	display: flex;
+	align-items: flex-end;
+}
+#hereToo {
 	display: flex;
 	flex-direction: column;
 }
@@ -364,15 +365,99 @@ div#contactMe{
 	}
 }
 
-#comingSoon {
-	display: none;
-	color: black;
-}
 @media(max-width: 850px) {
-	section > *{
-		display: none !important;
+	/* General */
+	h5 {
+		font-size: 1.5rem !important;
 	}
-	#comingSoon {
-		display: block !important;
+	h1.title {
+		font-size: 2rem;
+	}
+	h2 {
+		font-size: 1.5rem;
+	}
+
+	/* Turn off Navbar */
+	#navBar {
+		display: none;
+	}
+
+	/* Landing */
+	section#landing {
+		background-size: 200% 100%;
+		background-position: right;
+	}
+	h1.title {
+		font-size: 2rem;
+		animation: fadeIn 2s ease-in;
+		width: 100vw;
+	}
+	#subtitleDiv {
+		width: 100%;
+	}
+	h6.subtitle {
+		animation: unset;
+		white-space: pre-wrap;
+		font-size: 16px;
+		padding: 10px;
+	}
+
+	/* Intro */
+	div#intro{
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
+	/* My Work */
+	.front img {
+		width: 275px;
+		height: 275px;
+	}
+	.flip-container, .front, .back {
+		width: 275px;
+		height: 357px;
+	}
+	.back p {
+		font-size: 13px;
+	}
+	div#myWork{
+		padding-left: 0;
+		padding-right: 0;
+	}
+
+	/* My Skills */
+	div#expertise {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	.iconWrapper {
+		height: 75px;
+		width: 75px;
+		margin-left: 5px;
+		margin-right: 5px;
+	}
+	.fab, .far {
+		font-size: 38px
+	}
+
+	/* Contact Me */
+	div#contactMe {
+		padding-left: 0;
+		padding-right: 0;
+	}
+	#talkSoon {
+		display: none;
+	}
+	#contactLinks {
+		flex-wrap: wrap;
+	}
+	#contactLinks a img{
+		height: 64px;
+	}
+	#twitter-widget-1 {
+		display: unset !important;
+	}
+	#twitter-widget-0 {
+		display: none !important;
 	}
 }
